[package]
name = "camscrub"
version = "0.1.0"
authors = ["Xentec <xentec@aix0.eu>"]
edition = "2021"

[dependencies]
# Quality of Life
anyhow = "^1.0"

# Interface
clap = { version = "^3", default-features = false, features = ["std", "derive"] }
indicatif = "^0.16"

# I/O
futures-util = "^0.3"
async-channel = "^1.6"
tokio = { version = "^1.18", features = ["rt-multi-thread", "io-util", "io-std","fs","time"] }
tokio-stream = "^0.1"
reqwest = { version = "^0.11", default-features = false, features = ["json","brotli","gzip","stream","trust-dns", "rustls-tls"] }

# System
nix = { version = "^0.24", features = ["fs"] }

# Data processing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "^0.4", features = ["serde"] }

[profile.release]
lto = "thin"
